--- a/src/styles.css
+++ b/src/styles.css
@@ -40,6 +40,15 @@ body,
     color: transparent;
 }
 
+.gradient-background-tag {
+    background: linear-gradient(90deg, #ff78188d, #ff00518f);
+}
+
+.gradient-border {
+    border: 1px solid;
+    border-color: linear-gradient(90deg, #ff78188d, #ff00518f);
+}
+
 .glass {
     background: rgba(255, 255, 255, 0.05);
     border: 1px solid rgba(255, 255, 255, 0.1);
